--- a/bin/TriviaGame.fxml
+++ b/bin/TriviaGame.fxml
@@ -19,7 +19,7 @@
             <Insets top="20.0" />
          </VBox.margin>
       </Text>
-      <ProgressBar prefHeight="18.0" prefWidth="400.0" progress="0.0" />
+      <ProgressBar fx:id="progressBar" prefHeight="18.0" prefWidth="400.0" progress="0.0" />
       <VBox prefHeight="536.0" prefWidth="605.0">
          <children>
             <Label fx:id="question" alignment="CENTER" contentDisplay="CENTER" prefHeight="80.0" prefWidth="605.0" text="Question" wrapText="true">
