--- a/bin/TriviaGame.fxml
+++ b/bin/TriviaGame.fxml
@@ -80,7 +80,12 @@
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#confirmPressed" text="Confirm" />
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+         <children>
+            <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#confirmPressed" text="Confirm" />
+            <Button fx:id="newGameButton" mnemonicParsing="false" onAction="#newGamePressed" text="New Game" />
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
